[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_off"] }
env_logger = "0.9"
num-traits = "0.2"
num-derive = "0.3"
structopt = "0.3"
spec = { path = "../spec" }
